# Head-First-Rust

./: .gitignore  README.md
ch05/d14/: Cargo.toml
ch05/d15/: Cargo.toml
ch05/d17/: Cargo.toml
ch05/d18/: Cargo.toml
ch05/d19/: Cargo.toml
ch05/d20/: Cargo.toml
ch05/d21/: Cargo.toml
ch06/d3/: Cargo.toml
ch06/merge_sort/: Cargo.toml
ch06/mul_arr/: Cargo.toml
ch06/mul_row_arr/: Cargo.toml
ch06/quick_sort/: Cargo.toml
ch06/slice_demo/: Cargo.toml
ch12/d11/: Cargo.toml
ch12/d12/: Cargo.toml
ch12/d13/: Cargo.toml
ch12/d16/: Cargo.toml
ch12/d4/: Cargo.toml
ch12/s4_d1/: Cargo.toml
ch12/s4_d2/: Cargo.toml
ch12/s4_d3/: Cargo.toml
ch12/s4_d4/: Cargo.toml
ch12/s4_d5/: Cargo.toml
ch14/s1_d1/: Cargo.toml
ch14/s1_d2/: Cargo.toml
ch14/s1_d3/: Cargo.toml
ch14/s1_d4/: Cargo.toml
ch14/s1_d5/: Cargo.toml
ch14/s2_d1/: Cargo.toml
ch14/s2_d2/: Cargo.toml
ch14/s2_d3/: Cargo.toml
ch14/s2_d4/: Cargo.toml
ch14/s2_d5/: Cargo.toml
ch16/s1_d/: Cargo.toml
ch16/s1_d6/: Cargo.toml
ch16/s2_d1/: Cargo.toml
ch16/s2_d2/: Cargo.toml
ch16/s2_d3/: Cargo.toml
ch16/s3-d2/: Cargo.toml
ch16/s3-d3/: Cargo.toml
ch16/s3-d4/: Cargo.toml
ch16/s3-d5/: Cargo.toml
ch16/s3-d6/: Cargo.toml
ch16/s3-d7/: Cargo.toml
ch16/s3-d8/: Cargo.toml
ch16/s3_d1/: Cargo.toml
ch16/s4-d1/: Cargo.toml
ch16/s4-d2/: Cargo.toml
ch16/s4-d3/: Cargo.toml
ch16/s4-d4/: Cargo.toml
ch16/s4-d5/: Cargo.toml
ch31/s1/d1/: Cargo.toml
ch31/s1/d1/src/: main.rs
ch31/s1/d4/: Cargo.toml
ch31/s1/d4/src/: main.rs
ch31/s1/d6/: Cargo.toml
ch31/s1/d6/src/: main.rs
(+197 files in other folders)
